화환배너 전화번호 수정, 네이버지도 지오코딩 적용, contact 섹션 중복 텍스트 제거

--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ body {
 
 #contact-groom-father .person-role::before {
     content: '아버지';
+    padding-right: 4px;
 }
 #contact-groom-mother .person-role::before {
     content: '어머니';
