--- a/style.css
+++ b/style.css
@@ -58,10 +58,11 @@ body {
 }
 
 .header-img {
-    width: 375px;
-    height: 1140px;
+    width: 100%;
+    height: auto;
     display: block;
-    max-width: 375px; /* 375px 기준 */
+    min-width: 360px;
+    max-width: 400px;
     margin: 0 auto;
 }
 
